tests/error/multiplyInteger-bool-wrong-1st-argument.uplc
(program 1.0.0[[(builtin multiplyInteger)(con bool True)](con integer 10)])